[#3058] Fix bad spacing with alternate font sizes

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -176,8 +176,8 @@
     box-shadow: 0 0 12px var(--dnd5e-shadow-15);
     display: flex;
     align-items: center;
-    gap: .5rem;
-    padding: .5rem;
+    gap: 8px;
+    padding: 8px;
     height: 50px;
     max-width: 280px;
     position: relative;
@@ -439,7 +439,7 @@
     font-weight: bold;
     font-size: var(--font-size-13);
     text-transform: uppercase;
-    padding: .1875rem;
+    padding: 3px;
     border: 1px solid var(--color-border-light-2);
     box-shadow: 0 0 8px var(--dnd5e-shadow-15);
     display: flex;
@@ -543,8 +543,8 @@
   /* Pips */
   .pips {
     display: flex;
-    gap: .3125rem;
-    padding: .625rem .75rem;
+    gap: 5px;
+    padding: 10px 12px;
 
     .pip {
       background: var(--dnd5e-color-light-gray);
@@ -891,7 +891,7 @@
   background: transparent;
   color: var(--dnd5e-color-black);
   overflow: hidden;
-  font-size: var(--font-size-16);
+  font-size: 16px;
   cursor: nwse-resize;
   opacity: .4;
 
