--- a/less/v2/character.less
+++ b/less/v2/character.less
@@ -278,7 +278,7 @@
       display: flex;
       justify-content: end;
       align-items: center;
-      padding-right: .75rem;
+      padding-right: 12px;
       background: var(--dnd5e-color-black);
       color: var(--dnd5e-color-gold);
       --icon-fill: var(--dnd5e-color-gold);
@@ -298,7 +298,7 @@
       &::after {
         content: "";
         position: absolute;
-        inset: .25rem .25rem .25rem 0;
+        inset: 4px 4px 4px 0;
         border-radius: 0 5px 5px 0;
         border: 1px solid var(--dnd5e-color-gold);
         border-left: none;
@@ -323,10 +323,10 @@
     .main-content {
       display: grid;
       grid-template-columns: var(--dnd5e-sheet-sidebar-width) 1fr;
-      gap: .75rem;
+      gap: 12px;
       position: absolute;
       inset: 0;
-      padding: .5rem;
+      padding: 8px;
       overflow: hidden auto;
       scrollbar-width: thin;
       scrollbar-color: var(--dnd5e-color-scrollbar) transparent;
@@ -347,7 +347,7 @@
     .sidebar {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 16px;
       transition: margin-left 450ms ease;
 
       /* Character Card */
@@ -387,7 +387,7 @@
 
           > i {
             color: var(--dnd5e-color-gold);
-            font-size: var(--font-size-12);
+            font-size: 12px;
             margin: 0;
           }
         }
@@ -639,7 +639,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding: 0 .5rem;
+          padding: 0 8px;
           position: absolute;
           width: 100%;
           top: calc(100% - var(--tray-height));
@@ -649,7 +649,7 @@
           &.open { top: calc(100% - var(--lip)); }
 
           .death-saves {
-            --padding: .375rem;
+            --padding: 6px;
             background: black;
             border-radius: 0 0 5px 5px;
             box-shadow: 0 0 6px var(--color-shadow-dark);
@@ -1103,12 +1103,12 @@
     position: absolute;
     top: 0;
     right: 0;
-    left: calc(var(--dnd5e-sheet-sidebar-width) + 1.25rem);
+    left: calc(var(--dnd5e-sheet-sidebar-width) + 18px);
     pointer-events: none;
     container-type: inline-size;
 
     .rows {
-      padding: 4.75rem 0 4.75rem 1.5rem;
+      padding: 76px 0 76px 24px;
       display: flex;
       flex-wrap: wrap;
       width: 546px;
@@ -1116,7 +1116,7 @@
 
       > div {
         display: flex;
-        gap: 1.375rem;
+        gap: 22px;
       }
     }
 
@@ -1124,8 +1124,7 @@
       width: unset;
       margin: 0;
       justify-content: center;
-      padding-left: .75rem;
-      padding-right: .75rem;
+      padding-inline: 12px;
     }
 
     .top {
@@ -1143,7 +1142,7 @@
       justify-content: space-between;
       align-items: center;
       font-family: var(--dnd5e-font-roboto);
-      padding-top: .75rem;
+      padding-top: 12px;
       filter: drop-shadow(0 0 6px var(--dnd5e-shadow-45));
       pointer-events: all;
 
@@ -1160,10 +1159,10 @@
       }
 
       &.flipped {
-        padding: 0 0 .5rem 0;
+        padding: 0 0 8px 0;
         height: 72px;
         justify-content: start;
-        gap: .125rem;
+        gap: 2px;
 
         &::before { transform: scaleY(-1); }
         .mod { padding: 0; }
@@ -1190,26 +1189,26 @@
         font-weight: bold;
         color: var(--dnd5e-color-black);
         font-size: var(--font-size-16);
-        padding: .1875rem 0;
+        padding: 3px 0;
       }
 
       .score {
         width: 50px;
         height: 23px;
-        padding: .25rem;
+        padding: 4px;
         text-align: center;
         font-size: var(--font-size-13);
         color: var(--dnd5e-color-gold);
         background: black;
         border-radius: 3px;
-        margin-top: -.125rem;
+        margin-top: -2px;
 
         @media (prefers-contrast: more) {
           color: var(--color-text-light-1);
         }
 
         > input {
-          padding: .25rem;
+          padding: 4px;
           color: var(--dnd5e-color-gold);
           width: 50px;
           height: 23px;
@@ -1227,8 +1226,8 @@
     @container (min-width: 700px) {
       .rows {
         justify-content: center;
-        gap: 1.375rem;
-        padding-top: 9.25rem;
+        gap: 22px;
+        padding-top: 148px;
         width: unset;
         margin: 0;
 
@@ -1240,16 +1239,16 @@
         }
 
         .ability-score.flipped {
-          padding: .75rem 0 0;
+          padding: 12px 0 0;
           height: 64px;
           justify-content: space-between;
           gap: unset;
 
           &::before { transform: unset; }
-          .mod { padding: .1875rem 0; }
+          .mod { padding: 3px 0; }
 
           .score {
-            margin: -.125rem 0 0;
+            margin: -2px 0 0;
             order: unset;
           }
         }
@@ -1558,7 +1557,7 @@
     }
 
     .sheet-header > .left:is(.optional-ability-1, .optional-ability-2) {
-      padding-right: 1.5rem;
+      padding-right: 24px;
       .document-name { font-size: var(--font-size-46); }
     }
 
